1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Fix //# doc strings (following colon required).

1998-05-26  Alex Lancaster  <alex@santafe.edu>

	* defobj.h (raiseEvent,M(), initModule, globalZone, scratchZone,
	defsymbol, defwarning, deferror): Added (//#) doc strings.
	(<{Warning,Error}>): Added (//G) doc strings after each definition.
	(<Symbol>, _obj_formatIDString, objc_get_class, _obj_debug,
	(_obj_xerror, *_obj_xdebug, xsetname, xprint, xprintid, xfprint,
	xfprintid, xexec, xfexec): Added (//G) doc strings before each
	definition.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.h: Remove instances of <p> in the documentation.
	Minor changes to method spacing.
	(Create):  Move some documentation from createBegin: to 
	be general documentation. 
	(Error): Add a description.

	* DefObject.m: Minor reformatting.
	(Object_s): Add phase tags. 

1998-05-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.h: Add CREATING and USING tags where absent.

1998-04-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.h: Add documentation tags.

	* make-h2x: Insist that @deftype start at the beginning of a line.

1998-04-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.[hm]:  Add ProtocolViolation error symbol.

1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Zone.m: Include string.h for memset.

	* defobj.m: Don't include nil_method redefinition unless we
	are using gcc >= 2.8.0.

1998-04-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* defobj.m: Reformatting throughout.
	(nil_method): New function.  

	* Zone.m: Include collections/List_Linked.h instead of
	collections.h.  Include misc.h instead of stdlib.h and memory.h.
	Reformatting throughout.
	([Zone -createEnd]): Use List_linked instead of List to make
	population. 

	* Program.m: Include misc.h instead of stdlib.h. 
	Reformatting throughout.

1998-04-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
